# modular-logical-operator

./: .gitignore  Cargo.toml  LICENSE  README.md  html.js  index.html  node_file.js
pkg/: logical_module_program.d.ts  logical_module_program.js  logical_module_program_bg.js  logical_module_program_bg.wasm  logical_module_program_bg.wasm.d.ts  package.json
src/: compute_final_results.rs  evaluate_bool_result.rs  hash_bool_parameter_evaluation.rs  hash_string_logicalop.rs  js_user_parameters.rs  lib.rs  logicalop_initialisation.rs  print_result.rs  regular_expression_list.rs  user_inputs.rs  user_parameters.rs  util_dependencies.rs  utils.rs
tests/: testing_logic_all_backup.rs  testing_main.rs
